Cambios al archivo index con el codigo html

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Productos</title>
     <link rel="Icon" href="">
     <link rel="stylesheet" href="css/style.css">
-    <title>Proyecto web</title>
+    <title>Proyecto web Mi primer titulo</title>
 </head>
 <body>
     <main class="main">
